test/errors/runtime.ms
x = 1
x = noSuchThingy
x = 3
// Runtime Error: Undefined Identifier: 'noSuchThingy' is unknown in this context [line 2]

1 = a
// Runtime Error: not an lvalue [line 6]